--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
         abortOnError true
         disable 'MissingTranslation'
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude '.readme'
+    }
     buildTypes {
         release {
             try {
