--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:required="false" />
 
     <application
-        android:name="io.github.xTun.XtunApplication"
+        android:name=".xTunApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
@@ -45,13 +45,13 @@
         </activity>
 
         <activity
-            android:name="io.github.xTun.ui.XtunRunnerActivity"
+            android:name=".ui.xTunRunnerActivity"
             android:launchMode="singleTask"
             android:theme="@android:style/Theme.NoDisplay" >
         </activity>
 
         <service
-            android:name="io.github.xTun.service.XtunVpnService"
+            android:name=".service.xTunVpnService"
             android:enabled="true"
             android:exported="false"
             android:label="@string/app_name"
@@ -61,7 +61,7 @@
             </intent-filter>
         </service>
 
-        <receiver android:name="io.github.xTun.XtunReceiver" >
+        <receiver android:name=".xTunReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="io.github.xtun.ACTION_UPDATE_STATE" />
