update build tool version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ if(file('../sign.gradle').exists()) {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '23.0.2'
     defaultConfig {
         applicationId "io.github.xTun"
         minSdkVersion 18
