--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0-beta7'
-        classpath 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
         // classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
         classpath 'com.jakewharton:butterknife:7.0.1'
         // NOTE: Do not place your application dependencies here; they belong
@@ -14,7 +14,7 @@ buildscript {
     }
 
     // Exclude the version that the android plugin depends on.
-    configurations.classpath.exclude group: 'com.android.tools.external.lombok'
+    // configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 allprojects {
