--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,11 +68,11 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".NetworkChangeReceiver" >
+<!--        <receiver android:name=".NetworkChangeReceiver" >
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
-        </receiver>
+        </receiver>-->
 
     </application>
 
