--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,11 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-beta7'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-        // classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
+        classpath 'com.android.tools.build:gradle:2.2.2'
         classpath 'com.jakewharton:butterknife:7.0.1'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
-
-    // Exclude the version that the android plugin depends on.
-    // configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 allprojects {
