--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,16 +7,20 @@ if(file('../sign.gradle').exists()) {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.1'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "io.github.xTun"
-        minSdkVersion 18
-        targetSdkVersion 25
-        versionCode 110
-        versionName '1.1.1'
-        jackOptions {
-            enabled true
+        minSdkVersion 21
+        targetSdkVersion 28
+        versionCode 120
+        versionName '1.2.0'
+
+        externalNativeBuild {
+            ndkBuild {
+                abiFilters 'armeabi-v7a', 'x86' //, 'arm64-v8a', 'x86_64'
+                arguments "-j${Runtime.runtime.availableProcessors()}"
+            }
         }
     }
     lintOptions {
@@ -36,14 +40,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         applicationVariants.all { variant ->
-            variant.outputs.each { output ->
-                appendVersionNameVersionCode(variant, output, defaultConfig)
+            variant.outputs.all { output ->
+                // variant.packageApplicationProvider.get().outputDirectory = new File(project.rootDir.absolutePath + "/apk")
+                def fileName
+                if (output.name == 'debug') {
+                    fileName = "xTun-v${defaultConfig.versionName}-debug.apk"
+                } else {
+                    fileName = "xTun-v${defaultConfig.versionName}.apk"
+                }
+                output.outputFileName = fileName
             }
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
@@ -58,31 +69,23 @@ android {
     }
 }
 
-def appendVersionNameVersionCode(variant, output, defaultConfig) {
-    def versionName = defaultConfig.versionName
-    if(variant.buildType.name == android.buildTypes.debug.name) {
-        versionName += "-beta"
-    }
-    def file = output.outputFile
-    output.outputFile = new File(file.parent, "xTun.apk".replace(".apk", "-v" + versionName + ".apk"))
-}
-
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:support-annotations:25.1.0'
-    compile "com.android.support:appcompat-v7:25.1.0"
-    compile 'io.reactivex.rxjava2:rxjava:2.0.2'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.github.akarnokd:rxjava2-extensions:0.10.0'
-    compile 'com.trello.rxlifecycle2:rxlifecycle:2.0.1'
-    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.0.1'
-    compile('com.mikepenz:materialdrawer:5.8.0@aar') {
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    api 'com.android.support:design:28.0.0'
+    api 'com.android.support:support-annotations:28.0.0'
+    api "com.android.support:appcompat-v7:28.0.0"
+    api 'com.android.support.constraint:constraint-layout:1.1.3'
+    api 'io.reactivex.rxjava2:rxjava:2.2.7'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'com.github.akarnokd:rxjava2-extensions:0.20.8'
+    api 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
+    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
+    api('com.mikepenz:materialdrawer:5.8.0@aar') {
         transitive = true
     }
-    compile "com.mikepenz:iconics-core:2.8.1@aar"
-    compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
-    compile 'dnsjava:dnsjava:2.1.7'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    api "com.mikepenz:iconics-core:2.8.1@aar"
+    api 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
+    api 'dnsjava:dnsjava:2.1.9'
+    api 'com.google.code.gson:gson:2.8.5'
+    api 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
