--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,10 +75,10 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    api 'com.android.support:design:28.0.0'
-    api 'com.android.support:support-annotations:28.0.0'
-    api "com.android.support:appcompat-v7:28.0.0"
-    api 'com.android.support.constraint:constraint-layout:1.1.3'
+    api 'com.google.android.material:material:1.0.0'
+    api 'androidx.annotation:annotation:1.0.0'
+    api 'androidx.appcompat:appcompat:1.0.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
     api 'io.reactivex.rxjava2:rxjava:2.2.7'
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'com.github.akarnokd:rxjava2-extensions:0.20.8'
