--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,22 +7,22 @@ if(file('../sign.gradle').exists()) {
 }
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    compileSdkVersion 32
+    buildToolsVersion '32.0.0'
     defaultConfig {
         applicationId "io.github.xTun"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 120
-        versionName '1.2.0'
+        versionCode 127
+        versionName '1.2.7'
 
         ndk {
-            abiFilters "armeabi-v7a", "x86"
+            abiFilters "arm64-v8a", "armeabi-v7a", "x86"
         }
 
         externalNativeBuild {
             ndkBuild {
-                abiFilters 'armeabi-v7a', 'x86' //, 'arm64-v8a', 'x86_64'
+                abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86' //, 'x86_64'
                 arguments "-j${Runtime.runtime.availableProcessors()}"
             }
         }
@@ -75,13 +75,13 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    api 'com.google.android.material:material:1.0.0'
-    api 'androidx.annotation:annotation:1.0.0'
-    api 'androidx.appcompat:appcompat:1.0.0'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    api 'io.reactivex.rxjava2:rxjava:2.2.7'
+    api 'com.google.android.material:material:1.5.0'
+    api 'androidx.annotation:annotation:1.3.0'
+    api 'androidx.appcompat:appcompat:1.4.1'
+    api 'androidx.constraintlayout:constraintlayout:2.1.3'
+    api 'io.reactivex.rxjava2:rxjava:2.2.10'
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    api 'com.github.akarnokd:rxjava2-extensions:0.20.8'
+    api 'com.github.akarnokd:rxjava2-extensions:0.20.10'
     api 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
     api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
     api('com.mikepenz:materialdrawer:5.8.0@aar') {
@@ -89,7 +89,7 @@ dependencies {
     }
     api "com.mikepenz:iconics-core:2.8.1@aar"
     api 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
-    api 'dnsjava:dnsjava:3.1.0'
-    api 'com.google.code.gson:gson:2.8.5'
+    api 'dnsjava:dnsjava:3.3.1'
+    api 'com.google.code.gson:gson:2.8.6'
     api 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
