--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
 
         <activity
             android:name="io.github.xTun.ui.MainActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -34,7 +34,8 @@
         <activity
             android:name="io.github.xTun.ui.AppManagerActivity"
             android:label="@string/title_activity_app_manager"
-            android:parentActivityName="io.github.xTun.ui.MainActivity">
+            android:parentActivityName="io.github.xTun.ui.MainActivity"
+            android:exported="false">
             <intent-filter>
                 <action android:name="io.github.xtun.ui.AppManagerActivity"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -63,7 +64,8 @@
             </intent-filter>
         </service>
 
-        <receiver android:name=".xTunReceiver" >
+        <receiver android:name=".xTunReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="io.github.xtun.ACTION_UPDATE_STATE" />
